<resources>
    <string name="app_name">HSHelper</string>
    <string name="calendar">Calendar</string>
    <string name="contribute">Contribute</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Register failed</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="initial_activity_title">Initial activity</string>
    <string name="logo_title">Logo</string>
    <string name="login_with_google">Login with Google</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="personal_data">Personal Data</string>
    <string name="notifications">Notifications</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="new_homework">New homework</string>
    <string name="new_mark">New mark</string>
    <string name="account">Account</string>
    <string name="groups">Groups</string>
    <string name="downloading">Downloading</string>
    <string name="input_the_following_prompts">Input the following prompts</string>
    <string name="example_group_name">Name (2 курс. 2020-2021)</string>
    <string name="submit">Submit</string>
    <string name="create_new_group">Create new group</string>
    <string name="delete_group">Delete Group</string>
    <string name="select_group">Select Group</string>
    <string name="select_users">Select users</string>
    <string name="add_users_to_group">Add Users to group</string>
</resources>