<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal_data">
        <EditTextPreference
            app:key="@string/first_name"
            app:title="@string/first_name" />
        <EditTextPreference
            app:key="@string/second_name"
            app:title="@string/second_name" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">
        <SwitchPreferenceCompat
            app:key="@string/new_mark"
            app:title="@string/new_mark" />
        <SwitchPreferenceCompat
            app:key="@string/new_homework"
            app:title="@string/new_homework" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account">
        <Preference
            app:key="@string/sign_out"
            app:title="@string/sign_out" />
    </PreferenceCategory>
</PreferenceScreen>