<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".androidApp.ui.contributions.groups.AddUsersToGroupActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/selectGroupButton"
        android:text="@string/select_group"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/selectUsersButton"
        android:text="@string/select_users"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <Button
        android:id="@+id/submitButton"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

</LinearLayout>